// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display portfolio reducer SET_PORTFOLIO_ID returns expected state 1`] = `
Object {
  "id": 22,
  "type": "online",
}
`;

exports[`display portfolio reducer SET_PORTFOLIO_TYPE returns expected state 1`] = `
Object {
  "id": null,
  "type": "print",
}
`;

exports[`display portfolio reducer initial state is correct 1`] = `
Object {
  "id": null,
  "type": "online",
}
`;
